# phala-blockchain

./: Cargo.toml
crates/phactory/: Cargo.toml
crates/pink-drivers/system/: lib.rs
crates/pink-libs/subrpc/: Cargo.toml
crates/pink/pink-extension/: Cargo.toml
crates/pink/pink-extension/src/: chain_extension.rs  system.rs
crates/pink/src/: runtime.rs
crates/sidevm/macro/: Cargo.toml
e2e/res/: log_server.contract  system.contract
standalone/prb/: Cargo.toml
standalone/prb/src/: cli.rs  configurator.rs  datasource.rs  db.rs  lib.rs  lifecycle.rs  utils.rs  wm.rs
standalone/pruntime/src/: main.rs
standalone/replay/: Cargo.toml
standalone/runtime/src/: lib.rs
